--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -125,12 +125,17 @@
     <ClCompile Include="BigIntegerCalculator.cpp" />
     <ClCompile Include="BitBlit.cpp" />
     <ClCompile Include="Bits.cpp" />
+    <ClCompile Include="ChainOfResponsibilityPattern.cpp" />
+    <ClCompile Include="cine-mach.cpp" />
+    <ClCompile Include="classDefinition.cpp" />
+    <ClCompile Include="commandPattern.cpp" />
     <ClCompile Include="CppCheatSheet.cpp" />
     <ClCompile Include="Crawler.cpp" />
     <ClCompile Include="DifferenceBetweenHashcingAndEncryption.cpp" />
     <ClCompile Include="DistributedSystemLoadBalancing.cpp" />
     <ClCompile Include="DNSDesign.cpp" />
     <ClCompile Include="EnterNBAWhatWillHappen.cpp" />
+    <ClCompile Include="exceptionHandling.cpp" />
     <ClCompile Include="fibonacci_like.cpp" />
     <ClCompile Include="FileSystemDesign.cpp" />
     <ClCompile Include="GargabeCollectionSystem.cpp" />
@@ -140,6 +145,8 @@
     <ClCompile Include="HowPingWorks.cpp" />
     <ClCompile Include="HttpSession.cpp" />
     <ClCompile Include="ImplementingCachingProxyServer.cpp" />
+    <ClCompile Include="iteratorPattern.cpp" />
+    <ClCompile Include="iteratorPatternTest.cpp" />
     <ClCompile Include="LinkedList.cpp" />
     <ClCompile Include="mergeSort.cpp" />
     <ClCompile Include="narray-tree-traversal.cpp" />
@@ -154,16 +161,25 @@
     <ClCompile Include="PhoneKeyMapper.cpp" />
     <ClCompile Include="ProducerConsumer.cpp" />
     <ClCompile Include="ServerMessagingShortest.cpp" />
+    <ClCompile Include="ServiceComponentArchitecture.cpp" />
     <ClCompile Include="singletonPatternVsStatic.cpp" />
     <ClCompile Include="StreamingVideoApp.cpp" />
+    <ClCompile Include="stringstream.cpp" />
     <ClCompile Include="TCPvsUDP.cpp" />
     <ClCompile Include="template.cpp" />
+    <ClCompile Include="templateClassDefinition.cpp" />
     <ClCompile Include="Tree.cpp" />
     <ClCompile Include="Unicode.cpp" />
     <ClCompile Include="VirtualMemoryAllocator.cpp" />
     <ClCompile Include="YourMostChallenging.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="classDeclaration.h" />
+    <ClInclude Include="IEnumerable.h" />
+    <ClInclude Include="iteratorPattern.h" />
+    <ClInclude Include="iteratorPatternTest.h" />
+    <ClInclude Include="Main.h" />
+    <ClInclude Include="node.h" />
     <ClInclude Include="Tree.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
