--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -324,6 +324,9 @@
     <ClCompile Include="decodeNumberToLetters.cpp">
       <Filter>소스 파일\algorithmPractice\dynamicProgramming</Filter>
     </ClCompile>
+    <ClCompile Include="overridding_const_dest.cpp">
+      <Filter>소스 파일\cppCheatSheet</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Tree.h">
