--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -70,6 +70,12 @@
     <Filter Include="소스 파일\algorithmPractice\puzzle">
       <UniqueIdentifier>{334156e6-e64a-4835-b1e5-e1d703bc0655}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\designPattern\pooling">
+      <UniqueIdentifier>{07182fb0-2207-428d-b42a-890b434a9af4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="소스 파일\designPattern\scopedLock">
+      <UniqueIdentifier>{13e57cd1-f06c-4496-8b9a-8bbc3650bb2a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -327,6 +333,33 @@
     <ClCompile Include="overridding_const_dest.cpp">
       <Filter>소스 파일\cppCheatSheet</Filter>
     </ClCompile>
+    <ClCompile Include="compositorVisitorPattern.cpp">
+      <Filter>소스 파일\designPattern</Filter>
+    </ClCompile>
+    <ClCompile Include="proxyPattern.cpp">
+      <Filter>소스 파일\designPattern</Filter>
+    </ClCompile>
+    <ClCompile Include="observerPattern.cpp">
+      <Filter>소스 파일\designPattern</Filter>
+    </ClCompile>
+    <ClCompile Include="facadePattern.cpp">
+      <Filter>소스 파일\designPattern</Filter>
+    </ClCompile>
+    <ClCompile Include="mediatorPattern.cpp">
+      <Filter>소스 파일\designPattern</Filter>
+    </ClCompile>
+    <ClCompile Include="connectionPool.cpp">
+      <Filter>소스 파일\designPattern\pooling</Filter>
+    </ClCompile>
+    <ClCompile Include="connection.cpp">
+      <Filter>소스 파일\designPattern\pooling</Filter>
+    </ClCompile>
+    <ClCompile Include="poolingTest.cpp">
+      <Filter>소스 파일\designPattern\pooling</Filter>
+    </ClCompile>
+    <ClCompile Include="mementoPattern.cpp">
+      <Filter>소스 파일\designPattern</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Tree.h">
@@ -370,6 +403,18 @@
     </ClInclude>
     <ClInclude Include="travelingSalesman.h">
       <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="pool.h">
+      <Filter>소스 파일\designPattern\pooling</Filter>
+    </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>소스 파일\designPattern\pooling</Filter>
+    </ClInclude>
+    <ClInclude Include="connectionPool.h">
+      <Filter>소스 파일\designPattern\pooling</Filter>
+    </ClInclude>
+    <ClInclude Include="connection.h">
+      <Filter>소스 파일\designPattern\pooling</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
