--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -366,6 +366,12 @@
     <ClCompile Include="memopad.cpp">
       <Filter>소스 파일\industryAlgorithm</Filter>
     </ClCompile>
+    <ClCompile Include="strategyPatternImpl.cpp">
+      <Filter>소스 파일\designPattern</Filter>
+    </ClCompile>
+    <ClCompile Include="solidPattern.cpp">
+      <Filter>소스 파일\designPattern</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Tree.h">
