--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -496,5 +496,8 @@
     <Text Include="algorithm.txt">
       <Filter>리소스 파일</Filter>
     </Text>
+    <Text Include="output.txt">
+      <Filter>리소스 파일</Filter>
+    </Text>
   </ItemGroup>
 </Project>
